project('Ch01', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++20'])

executable('Ch01',
           'EnumExamples.cpp',
           'NewFeatures.cpp',
           'LambdaExpressions.cpp',
           'Main.cpp',
           'MathFunctionsAndConstants.cpp',
           install : true)
